unpackaged/objects/Contact.object
<CustomObject>
  <fields>
    <fullName>Consent_to_store_data_obtained__c</fullName>
    <description>By this You assure that Contact have actively given a consent to Astra Tech to store data and use if for purposes as described for him/her. You know that you are responsible for the consent and that you will be requested to show it if you are audited.</description>
    <inlineHelpText>By this You assure that Contact has actively given a consent to Dentsply Sirona to store data and use if for purposes as described for him/her. You know that you are responsible for the consent and that you will be requested to show it if you are audited.</inlineHelpText>
    <label>Consent to store Contact data obtained</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <value>
          <fullName>Yes</fullName>
        </value>
        <value>
          <fullName>No</fullName>
        </value>
        <value>
          <fullName>Not yet</fullName>
          <default>true</default>
          <label>Not yet</label>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>ContactID18Digit__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact ID (18 Digit)</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Contact_Assigned_Territories__c</fullName>
    <formula>Account.TerritoryUsers__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Assigned Territories</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Contact_Card_link__c</fullName>
    <description>A link to the Contact card page</description>
    <formula>HYPERLINK("/apex/ContactCard?id=" &amp; Id 
, "Contact Card")</formula>
    <inlineHelpText>A link to the Contact Card page</inlineHelpText>
    <label>Contact Card link</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Contact_Consent_Date__c</fullName>
    <description>If Yes: The date should correspond to when the consent was given by the Contact. 
If No or Not yet: The date should correspond to when you at the latest plan to gain the consent. This date will be monitored and should be set according to local rules.</description>
    <inlineHelpText>If Yes: The date should correspond to when the consent was given by the end user. 
If No or Not yet: The date should correspond to when you at the latest plan to gain the consent. This date will be monitored and should be set according to local rules.</inlineHelpText>
    <label>Contact Consent Date</label>
    <type>Date</type>
  </fields>
  <fields>
    <fullName>Contact_Data_Quality_Score_D__c</fullName>
    <formula>IF( AND( ISPICKVAL(Product_Area__c,"Dental"), NOT( Inactive__c )) , IF( LEN( Phone) = 0, 0,20) + IF( LEN( Email) = 0, 0,20) + IF( LEN(MailingStreet) = 0, 0,20) + IF( LEN(Title) = 0, 0,20) + IF( ISPICKVAL( Profession__c ,""), 0,20), NULL)</formula>
    <label>Contact Data Quality Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Contact_HQ__c</fullName>
    <description>This field is checked for every contact and should not be visible anywhere but in reports. Used for reports like "Give me the number of different Contacts together with the CFEs"</description>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field is checked for every contact and should not be visible anywhere but in reports. Used for reports like "Give me the number of different Contacts together with the CFEs"</inlineHelpText>
    <label>Contact # (HQ)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Contact_Status_icon__c</fullName>
    <formula>IF( AND(OR($RecordType.Id = "01220000000AIY5", RecordTypeId ="01220000000CyRU"), Inactive__c = TRUE), IMAGE("/servlet/servlet.FileDownload?file=01520000000mkdN", "Inactive" ,20,20), IMAGE("/servlet/servlet.FileDownload?file=01520000000mqun", "Active",20,20 )
)</formula>
    <label>Contact Status (icon)</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Contact_Type__c</fullName>
    <label>Contact Type</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <value>
          <fullName>Dental Clinic Contact</fullName>
        </value>
        <value>
          <fullName>Dental Laboratory Contact</fullName>
        </value>
        <value>
          <fullName>Distributor Contact</fullName>
        </value>
        <value>
          <fullName>Hospital Contact</fullName>
        </value>
        <value>
          <fullName>University Contact</fullName>
        </value>
        <value>
          <fullName>Wholesaler Contact</fullName>
        </value>
        <value>
          <fullName>Purchasing Group Contact</fullName>
        </value>
        <value>
          <fullName>Government Contact</fullName>
        </value>
        <value>
          <fullName>DENTSPLY SIRONA Contact</fullName>
        </value>
        <value>
          <fullName>Competitor Contact</fullName>
        </value>
        <value>
          <fullName>Other Contact</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Contact_s_Account_ID__c</fullName>
    <formula>Account.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact's Account ID</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Continent__c</fullName>
    <description>Grouping Markets into Continent
US &amp; CA = North America
AU &amp; NZ &amp; JP = Asia/Pacific
Rest .... Europe</description>
    <formula>CASE ( Country__c , "USA", "North America", "Canada", "North America", "Australia", "Asia/Pacific", "New Zealand" , "Asia/Pacific", "Japan", "Asia/Pacific", "Europe")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Continent</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Count__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Country_Code_3_digit__c</fullName>
    <description>TFUS-000002404 Used by Eloqua</description>
    <label>Country Code (3-digit)</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetName>Country_Code_3_digit</valueSetName>
    </valueSet>
  </fields>
  <fields>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <sorted>true</sorted>
        <value>
          <fullName>Albania</fullName>
        </value>
        <value>
          <fullName>Algeria</fullName>
        </value>
        <value>
          <fullName>Argentina</fullName>
        </value>
        <value>
          <fullName>Armenia</fullName>
        </value>
        <value>
          <fullName>Australia</fullName>
        </value>
        <value>
          <fullName>Austria</fullName>
        </value>
        <value>
          <fullName>Azerbaijan</fullName>
        </value>
        <value>
          <fullName>Bahrain</fullName>
        </value>
        <value>
          <fullName>Belarus</fullName>
        </value>
        <value>
          <fullName>Belgium</fullName>
        </value>
        <value>
          <fullName>Bosnia and Herzegovina</fullName>
        </value>
        <value>
          <fullName>Botswana</fullName>
        </value>
        <value>
          <fullName>Brazil</fullName>
        </value>
        <value>
          <fullName>Bulgaria</fullName>
        </value>
        <value>
          <fullName>Cambodia</fullName>
        </value>
        <value>
          <fullName>Canada</fullName>
        </value>
        <value>
          <fullName>Chile</fullName>
        </value>
        <value>
          <fullName>China</fullName>
        </value>
        <value>
          <fullName>Colombia</fullName>
        </value>
        <value>
          <fullName>Croatia</fullName>
        </value>
        <value>
          <fullName>Cyprus</fullName>
        </value>
        <value>
          <fullName>Czech Republic</fullName>
        </value>
        <value>
          <fullName>Denmark</fullName>
        </value>
        <value>
          <fullName>Ecuador</fullName>
        </value>
        <value>
          <fullName>Egypt</fullName>
        </value>
        <value>
          <fullName>Estonia</fullName>
        </value>
        <value>
          <fullName>Finland</fullName>
        </value>
        <value>
          <fullName>France</fullName>
        </value>
        <value>
          <fullName>Germany</fullName>
        </value>
        <value>
          <fullName>Greece</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Credentials__c</fullName>
    <description>Credentials of the Contact, such as "DDS" or "RDH" or "DMD"</description>
    <inlineHelpText>Credentials of the Contact, such as "DDS" or "RDH" or "DMD"</inlineHelpText>
    <label>Credentials</label>
    <length>30</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Current_Clinical_Studies_Ref__c</fullName>
    <label>Current Clinical Studies Ref#</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Customized_Course_ES__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by ES to track if a contact has participated a customized course.</description>
    <label>Customized Course (ES)</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>CventId__c</fullName>
    <description>Field used for matching Contacts between Cvent and Salesforce</description>
    <formula>Id</formula>
    <label>Cvent Matching Id</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>DI_D4I__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For Dentists registered on the http://www.dentists4implants.com/ website</description>
    <inlineHelpText>For Dentists registered on the http://www.dentists4implants.com/ website</inlineHelpText>
    <label>D4I (UK)</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Data_Quality_Description__c</fullName>
    <formula>IF( Data_Quality_Score__c =100,"All Contact Details Captured", "Missing: "&amp;IF( LEN( FirstName ) = 0, "First name, ","")&amp;""&amp;IF(LEN( Phone )+LEN(Account.Phone) = 0, "Phone, ","")&amp;""&amp;IF(LEN( Email ) = 0, "Email, ","")&amp;""&amp;IF( LEN( MailingStreet )+LEN(Account.BillingStreet) = 0, "Complete Address, ","")&amp;""&amp;IF( LEN( Title ) = 0, "Job Title, ","")&amp;""&amp;IF(ISPICKVAL( Salutation,""), "Salutation",""))</formula>
    <label>Data Quality Description</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Data_Quality_Score__c</fullName>
    <formula>IF( LEN( FirstName) = 0, 0,20) + IF( LEN( Phone)+LEN(Account.Phone)=0, 0, 20) + IF( LEN( Email) = 0, 0,20) + IF( LEN( MailingStreet )+LEN(Account.BillingStreet) = 0, 0, 20) + IF( LEN(Title) = 0, 0,20) + IF( ISPICKVAL(Salutation,""), 0,20)</formula>
    <label>Data Quality Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Degree__c</fullName>
    <description>Used by HQ T&amp;E.</description>
    <label>Degree</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Dental_School_D_JP__c</fullName>
    <description>Field to capture the dental school where a contact graduated. Created specifically for Japan.</description>
    <label>Dental School</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Description_Sirona__c</fullName>
    <description>Used only in UK for the collaboration between Dentsply and Sirona</description>
    <label>Description (Sirona)</label>
    <type>TextArea</type>
  </fields>
  <fields>
    <fullName>Direct_Dial__c</fullName>
    <description>Direct Dial number for Contacts</description>
    <label>Direct Dial</label>
    <type>Phone</type>
  </fields>
  <fields>
    <fullName>Distributor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contacts (Account)</relationshipLabel>
    <relationshipName>Contacts4</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Do_Not_Mail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Mail</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Dup_flow_info__c</fullName>
    <formula>Full_Name__c &amp; '||' &amp; Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dup flow info</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Duplicate_Check_ID__c</fullName>
    <description>This field should not be shown on any page layouts. It is used to track the master Account ID when performing duplicate checks.</description>
    <inlineHelpText>This field should not be shown on any page layouts. It is used to track the master Account ID when performing duplicate checks.</inlineHelpText>
    <label>Duplicate Check ID</label>
    <length>32</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Duplicate_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Duplicate Id</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
  </fields>
  <fields>
    <fullName>Duplicate_check_Master__c</fullName>
    <description>This field should not be shown on any page layouts. It is used to track if this account is considered as Master when the merge is performed.</description>
    <inlineHelpText>This field should not be shown on any page layouts. It is used to track if this account is considered as Master when the merge is performed.</inlineHelpText>
    <label>Duplicate check Master?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>EAO_2015__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Participate EAO 2015</description>
    <inlineHelpText>Participate EAO 2015</inlineHelpText>
    <label>EAO 2016</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>E_business_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To be ticked off manually, or set by manual import, if contact is the assigned e-business contact with Astra Tech</description>
    <inlineHelpText>To be ticked off manually, or set by manual import, if contact is the assigned e-business contact with Astra Tech</inlineHelpText>
    <label>E-business Contact</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Email_2_NA__c</fullName>
    <description>Personal Email  - not for mass emailing</description>
    <inlineHelpText>Personal Email, not for mass emailing</inlineHelpText>
    <label>Personal Email</label>
    <type>Email</type>
  </fields>
  <fields>
    <fullName>Email_Consent_Collected_Mktg_1_Email__c</fullName>
    <label>Email Consent Collected - Mktg#1 Email</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetName>Yes_No</valueSetName>
    </valueSet>
  </fields>
  <fields>
    <fullName>Email_Consent_Collected_Mktg_2_Email__c</fullName>
    <label>Email Consent Collected - Mktg#2 Email</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetName>Yes_No</valueSetName>
    </valueSet>
  </fields>
  <fields>
    <fullName>Email_Consent_Collected_OrderWeb_Email__c</fullName>
    <label>Email Consent Collected - OrderWeb Email</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetName>Yes_No</valueSetName>
    </valueSet>
  </fields>
  <fields>
    <fullName>Email_Consent_Collected_Personal_Email__c</fullName>
    <label>Email Consent Collected - Personal Email</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetName>Yes_No</valueSetName>
    </valueSet>
  </fields>
  <fields>
    <fullName>Email_Consent_Date_Marketing_Email_1__c</fullName>
    <label>Email Consent Date - Marketing Email #1</label>
    <type>Date</type>
  </fields>
  <fields>
    <fullName>Email_Consent_Date_Marketing_Email_2__c</fullName>
    <label>Email Consent Date - Marketing Email #2</label>
    <type>Date</type>
  </fields>
  <fields>
    <fullName>Email_Consent_Date_Ordering_Web__c</fullName>
    <label>Email Consent Date - Ordering/Web</label>
    <type>Date</type>
  </fields>
  <fields>
    <fullName>Email_Consent_Date_Personal__c</fullName>
    <label>Email Consent Date - Personal</label>
    <type>Date</type>
  </fields>
  <fields>
    <fullName>Email_Consent_Date__c</fullName>
    <description>Used by Canada for legal reasons</description>
    <inlineHelpText>Used by Canada for legal reasons</inlineHelpText>
    <label>Email Consent Date</label>
    <type>Date</type>
  </fields>
  <fields>
    <fullName>Email_Consent_collected__c</fullName>
    <description>This field is used as part of the data privacy, e.g. GDPR process to make sure we are collecting information about whether a consent has been collected or not for sending marketing emails. If yes is selected that Email Consent Date fields will be updated with Todays date. If no the email opt out checkbox will be checked. Using workflows. Email still kept for both selections</description>
    <inlineHelpText>I confirm that I have obtained the customers permission for their email address to be used by Dentsply Sirona for Marketing communications.</inlineHelpText>
    <label>Email Marketing Consent collected</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Please Select Yes or No</fullName>
        </value>
        <value>
          <fullName>Yes</fullName>
        </value>
        <value>
          <fullName>No</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Email_Last_Modified_By__c</fullName>
    <description>updated by workflow</description>
    <label>Email Last Modified By</label>
    <length>50</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Email_Last_Modified_Date__c</fullName>
    <label>Email Last Modified Date</label>
    <type>DateTime</type>
  </fields>
  <fields>
    <fullName>Email_Opt_In__c</fullName>
    <label>Email Opt In</label>
    <type>Date</type>
  </fields>
  <fields>
    <fullName>Email_is_Populated__c</fullName>
    <formula>CASE( Email, NULL,0,1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email is Populated</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Exhibition_CH__c</fullName>
    <description>Used to track special exhibitions etc in Switzerland only . Will most likely be removed the campaign module will be launched.</description>
    <inlineHelpText>Write the exhibitions that the contact attended in this field. Separate by comma.</inlineHelpText>
    <label>Exhibition (CH)</label>
    <type>TextArea</type>
  </fields>
  <fields>
    <fullName>External_Identifier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>External Identifier</label>
    <referenceTo>External_Identifier__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Federal_Contact_ID__c</fullName>
    <description>TFUS-000003439 (earlier RPPS ID)</description>
    <inlineHelpText>This ID is for contact not having a practitioner ID</inlineHelpText>
    <label>Federal Contact ID</label>
    <length>30</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>First_Year_of_Practive__c</fullName>
    <label>First Year of Practice</label>
    <length>4</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Flight_Requirement_Overseas__c</fullName>
    <label>Flight Requirements Overseas</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <value>
          <fullName>Economy class</fullName>
        </value>
        <value>
          <fullName>Economy class, aile</fullName>
        </value>
        <value>
          <fullName>Economy class, window</fullName>
        </value>
        <value>
          <fullName>Economy class, emergency exit</fullName>
        </value>
        <value>
          <fullName>Business class</fullName>
        </value>
        <value>
          <fullName>Business class, aile</fullName>
        </value>
        <value>
          <fullName>Business class, window</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Follow_up_More_information__c</fullName>
    <description>To fill in after EAO 2015</description>
    <inlineHelpText>To fill in after EAO 2015</inlineHelpText>
    <label>Follow up More information</label>
    <type>TextArea</type>
  </fields>
  <fields>
    <fullName>Former_Employer__c</fullName>
    <description>Former Employer of Contact</description>
    <label>Former Employer</label>
    <length>80</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Full_Name__c</fullName>
    <description>Used instead of having to add First and Last Name when grouping in report</description>
    <formula>FirstName &amp; " " &amp; LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula field</inlineHelpText>
    <label>Full Name</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Gender__c</fullName>
    <label>Gender</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <value>
          <fullName>Female</fullName>
        </value>
        <value>
          <fullName>Male</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Government_Practitioner_Type__c</fullName>
    <label>Government Practitioner Type</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>NPI</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Graduation_year__c</fullName>
    <description>Field to fill in the graduation year of a dental professional. Specifically created for Japan.</description>
    <label>Graduation Year</label>
    <length>4</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Greeting_Benelux__c</fullName>
    <label>Greeting (BNL)</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <value>
          <fullName>Geachte heer</fullName>
        </value>
        <value>
          <fullName>Chère madame</fullName>
        </value>
        <value>
          <fullName>Chère mademoisselle</fullName>
        </value>
        <value>
          <fullName>Geachte mevrouw</fullName>
        </value>
        <value>
          <fullName>Cher monsieur</fullName>
        </value>
        <value>
          <fullName>Sehr geehrter Herr</fullName>
        </value>
        <value>
          <fullName>Sehr geehrte Frau</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Greeting_CH__c</fullName>
    <label>Greeting (CH)</label>
    <type>Picklist</type>
    <valueSet>
      <controllingField>Preferred_Language_CH__c</controllingField>
      <valueSetDefinition>
        <value>
          <fullName>Docteur</fullName>
        </value>
        <value>
          <fullName>Professeur</fullName>
        </value>
        <value>
          <fullName>Monsieur</fullName>
        </value>
        <value>
          <fullName>Madame</fullName>
        </value>
        <value>
          <fullName>Sehr geehrte Frau</fullName>
        </value>
        <value>
          <fullName>Sehr geehrte Frau Dr.</fullName>
        </value>
        <value>
          <fullName>Sehr geehrte Frau Prof.</fullName>
        </value>
        <value>
          <fullName>Sehr geehrter Herr</fullName>
        </value>
        <value>
          <fullName>Sehr geehrter Herr Dr.</fullName>
        </value>
        <value>
          <fullName>Sehr geehrter Herr Prof.</fullName>
        </value>
        <value>
          <fullName>Egregio Dottor</fullName>
        </value>
        <value>
          <fullName>Gentile Dottoressa</fullName>
        </value>
        <value>
          <fullName>Egregio signor Prof.</fullName>
        </value>
        <value>
          <fullName>Gentile signora Prof.</fullName>
        </value>
        <value>
          <fullName>Egregio signor</fullName>
        </value>
        <value>
          <fullName>Gentile signora</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Greeting__c</fullName>
    <label>Greeting</label>
    <length>20</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Greetings_DI_AT__c</fullName>
    <description>Used by DI AT</description>
    <label>Greetings (AT)</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <value>
          <fullName>Sehr geehrter</fullName>
        </value>
        <value>
          <fullName>Sehr geehrte</fullName>
        </value>
        <value>
          <fullName>Dear</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Health_Check__c</fullName>
    <description>Requested and used in UK - temporary solution</description>
    <label>Health Check (UK)</label>
    <type>Date</type>
  </fields>
  <fields>
    <fullName>Honorarium_Comments__c</fullName>
    <label>Honorarium Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>HowCollected__c</fullName>
    <label>How collected?</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetName>GDPR_consent_method</valueSetName>
    </valueSet>
  </fields>
  <fields>
    <fullName>Implants_Management_Notes__c</fullName>
    <description>This field is for Implant Management only. Should only be available via a permisison set</description>
    <label>Implants Management Notes</label>
    <length>32768</length>
    <type>Html</type>
  </fields>
  <fields>
    <fullName>Inactive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To identify whether a Contact is Inactive or Active</description>
    <inlineHelpText>Check this checkbox if the contact is either retired, deceased or has left position/post</inlineHelpText>
    <label>Inactive</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Industry_Sector__c</fullName>
    <label>Industry Sector</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <value>
          <fullName>Dental Providers</fullName>
        </value>
        <value>
          <fullName>Education</fullName>
        </value>
        <value>
          <fullName>Government</fullName>
        </value>
        <value>
          <fullName>Internal</fullName>
        </value>
        <value>
          <fullName>Medical Providers</fullName>
        </value>
        <value>
          <fullName>Nursing Service Providers</fullName>
        </value>
        <value>
          <fullName>Other</fullName>
        </value>
        <value>
          <fullName>Other Service Providers</fullName>
        </value>
        <value>
          <fullName>Student, Health Care</fullName>
        </value>
        <value>
          <fullName>Supplier</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Initials__c</fullName>
    <label>Initials</label>
    <length>15</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>InsertEmailMarketingConsentCollected__c</fullName>
    <inlineHelpText>Please fill the information if the Email Marketing Consent was collected or not</inlineHelpText>
    <label>Insert Email Marketing Consent Collected</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Yes</fullName>
        </value>
        <value>
          <fullName>No</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Interested_in_Cerec__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used only in UK for the collaboration between Dentsply and Sirona</description>
    <label>Interested in Cerec</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Interested_in_Imaging__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used only in UK for the collaboration between Dentsply and Sirona</description>
    <label>Interested in Imaging</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Interested_in_Treatment_Centres__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used only in UK for the collaboration between Dentsply and Sirona</description>
    <label>Interested in Treatment Centres</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Internal_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox is set if the Contact is a Dentsply Sirona Employee</description>
    <inlineHelpText>This checkbox is set if the Contact is a Dentsply Sirona Employee</inlineHelpText>
    <label>Internal Contact</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>International_Speaker__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Only some HQ Users should have edit access</description>
    <label>International Speaker</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>IsMaster__c</fullName>
    <description>1 = Is Master
0 = Is Not master</description>
    <label>IsMaster?</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>KOL_UK_IE__c</fullName>
    <defaultValue>false</defaultValue>
    <description>UK/Ireland based KOL</description>
    <inlineHelpText>UK/Ireland based KOL</inlineHelpText>
    <label>KOL (UK/IE)</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>KOLs__c</fullName>
    <description>Roll up summary field to count the number of KOL Information records. This field is basically a help field that will be used in a formula checkbox to set the checkbox if this field is greater than 0</description>
    <label>#KOLs</label>
    <summaryFilterItems>
      <field>Expert__c.Inactive__c</field>
      <operation>equals</operation>
      <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Expert__c.Contact__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
  </fields>
  <fields>
    <fullName>Key_Opinion_Leader_D_JP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to filter out Key Opinion Leaders. Currently used in JP and DEX, France</description>
    <label>KOL</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>LastSurveySentDate__c</fullName>
    <description>Updated through the default process of cases. Every time we send a survey to the contact we set the date in this field.TFUS-000003305</description>
    <inlineHelpText>The last date we sent a survey to the customer from GetFeedback.</inlineHelpText>
    <label>Last Survey Sent Date</label>
    <type>Date</type>
  </fields>
  <fields>
    <fullName>Last_CSat__c</fullName>
    <description>Last customer satisfaction value from the last survey. Filled automatically by the mapping of getfeedback.</description>
    <inlineHelpText>This information is coming from the last survey we sent to the contact and it represents his overall satisfaction about  our customer service.</inlineHelpText>
    <label>Last CSat</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Last_Csat_Value__c</fullName>
    <description>Last customer satisfaction value from the last survey. Filled automatically by the mapping of getfeedback.</description>
    <inlineHelpText>This information is coming from the last survey we sent to the contact and it represents his overall satisfaction about our customer service.</inlineHelpText>
    <label>Last Csat Value</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Last_Modified_User_Name__c</fullName>
    <formula>LastModifiedBy.FirstName</formula>
    <label>Last Modified User Name</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Last_NPS__c</fullName>
    <description>Last Net Promoter Score  value from the last survey. Filled automatically by the mapping of getfeedback.</description>
    <inlineHelpText>This information is coming from the last survey we sent to the contact and reflects the contact willingness to recommend us to a peer.  The score is from 1 to 10 and it means: The customer is: from 0-6 a Detractor, from 7-8 Passive, from  9-10 a Promoter.</inlineHelpText>
    <label>Last NPS</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Last_Qualtrics_Survey_Date__c</fullName>
    <description>This field is used to keep track of the last time a Qualtrics survey was sent. Qualtrics is today (2017-07-07) only used in UK but other countries and Global Customer Service have shown interest. This is a fast and easy way to stop surveys being sent to often to customers. If this becomes a global project a better ans scalable solution is needed.</description>
    <inlineHelpText>The last date of a survey sent to this contact from Qualtrics.</inlineHelpText>
    <label>Last Qualtrics Survey Date</label>
    <type>Date</type>
  </fields>
  <fields>
    <fullName>Last_Survey_Update__c</fullName>
    <description>Date of the last survey</description>
    <label>Last Survey Update</label>
    <type>Date</type>
  </fields>
  <fields>
    <fullName>Launch_Qual__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Launch Qualtrics Survey</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Legacy_ID__c</fullName>
    <externalId>true</externalId>
    <label>Legacy ID</label>
    <length>20</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Local_Speaker__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Local Speaker</label>
    <type>Checkbox</type>
  </fields>
</CustomObject>